[gd_scene load_steps=14 format=3 uid="uid://c2v70c25daah6"]

[ext_resource type="Script" uid="uid://b4pyur4og12ex" path="res://Scripts/mision_3.gd" id="1_00ljf"]
[ext_resource type="Texture2D" uid="uid://cx52r06ujoqb0" path="res://Assets/mc.png" id="1_pogfr"]
[ext_resource type="FontFile" uid="uid://cgv6ivbx2usab" path="res://Fuentes/dogica/TTF/dogicapixelbold.ttf" id="2_00ljf"]
[ext_resource type="FontFile" uid="uid://b7mtyx0310bsa" path="res://Fuentes/dogica/TTF/dogicapixel.ttf" id="3_pcqls"]
[ext_resource type="Texture2D" uid="uid://cmo6rlgoleck3" path="res://Icono/Copilot_20260102_165125.png" id="4_p8764"]
[ext_resource type="Texture2D" uid="uid://cf1xg5gnr13rt" path="res://Icono/Copilot_20260102_174758.png" id="5_qk30j"]
[ext_resource type="AudioStream" uid="uid://dx8rucdunm3do" path="res://Sounds/complete.wav" id="6_wawrx"]
[ext_resource type="Texture2D" uid="uid://b2sswmbou53rj" path="res://Assets/fondoazul.png" id="7_5846t"]
[ext_resource type="AudioStream" uid="uid://k4gdavo25o5a" path="res://Sounds/click.wav" id="8_8qtbn"]

[sub_resource type="Animation" id="Animation_qrfpl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_84o0k"]
resource_name = "mision"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Sprite2D2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_xjrh6"]
resource_name = "mostrar_textos"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xjrh6"]
_data = {
&"RESET": SubResource("Animation_qrfpl"),
&"mision": SubResource("Animation_84o0k"),
&"mostrar_textos": SubResource("Animation_xjrh6")
}

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_00ljf")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(670, 351)
scale = Vector2(0.9244791, 0.7363281)
texture = ExtResource("1_pogfr")

[node name="LabelTitulo" type="Label" parent="."]
offset_left = 116.0
offset_top = 57.0
offset_right = 1289.0
offset_bottom = 153.0
theme_override_colors/font_color = Color(0.20392157, 0.8156863, 0.2, 1)
theme_override_fonts/font = ExtResource("2_00ljf")
theme_override_font_sizes/font_size = 70
text = "MISION  COMPLETADA"

[node name="LabelTexto" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -420.0
offset_top = -64.0
offset_right = 421.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.20392157, 0.8156863, 0.2, 1)
theme_override_fonts/font = ExtResource("3_pcqls")
theme_override_font_sizes/font_size = 60
text = "Mision Completada"

[node name="Button" type="Button" parent="."]
offset_left = 781.0
offset_top = 445.0
offset_right = 1006.0
offset_bottom = 660.0
theme_override_colors/icon_pressed_color = Color(0.20392157, 0.8156863, 0.2, 1)
theme_override_colors/icon_hover_color = Color(0.20392157, 0.8156863, 0.2, 1)
icon = ExtResource("4_p8764")
expand_icon = true

[node name="Button3" type="Button" parent="."]
offset_left = 321.0
offset_top = 433.0
offset_right = 549.0
offset_bottom = 648.0
theme_override_colors/icon_pressed_color = Color(0.20392157, 0.8156863, 0.2, 1)
theme_override_colors/icon_hover_color = Color(0.20392157, 0.8156863, 0.2, 1)
icon = ExtResource("5_qk30j")
expand_icon = true

[node name="SonidoMision" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_wawrx")

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(708, 372)
scale = Vector2(1.7304688, 1)
texture = ExtResource("7_5846t")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D2"]
root_node = NodePath("../../Sprite2D")
libraries = {
&"": SubResource("AnimationLibrary_xjrh6")
}
autoplay = "mision"

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_8qtbn")
volume_db = -5.474

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
